# omgpp-core

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/client/: Cargo.toml  build.rs
crates/client-server/: Cargo.toml  build.rs
crates/client-server/src/: client.rs  server.rs
crates/client-server/src/client/: ffi.rs
crates/client-server/src/server/: ffi.rs  server_settings.rs
crates/client/src/: ffi.rs  lib.rs
crates/omgpp-core/: Cargo.toml  build.rs
crates/omgpp-core/proto/: general-message.proto
crates/omgpp-core/src/: cmd_handler.rs  ffi.rs  lib.rs
crates/resource-manager/: Cargo.toml
crates/resource-manager/src/: lib.rs  main.rs  resource_indexer.rs  resource_registry.rs
crates/server/: Cargo.toml
crates/server/src/: connection_tracker.rs  ffi.rs  lib.rs  main.rs  server_settings.rs
dev/: Dockerfile  README.md  docker-compose.yaml
dev/rust/: .env  README.md  start.sh
docs/: README.md  high_level_overview.drawio
examples/: README.md
examples/regular_chat/: Cargo.toml
examples/regular_chat/src/: chat_client.rs  chat_message.rs  chat_server.rs  chat_user.rs  main.rs
examples/simple_chat/: Cargo.toml
examples/simple_chat/src/: main.rs
projects/omgpp/: .gitignore  Cargo.toml  README.md
projects/omgpp-csharp/OmgppSharp/: OmgppSharp.sln
projects/omgpp-csharp/OmgppSharp/OmgppSharpClient/: Client.cs  Client.g.cs
projects/omgpp-csharp/OmgppSharp/OmgppSharpCore/: MessageHandler.cs
projects/omgpp-csharp/OmgppSharp/OmgppSharpCore/Interfaces/: IOmgppMessage.cs
projects/omgpp-csharp/OmgppSharp/OmgppSharpExample/: Message.Omgpp.cs  Message.cs  OmgppSharpExample.csproj  Program.cs  RpcHandler.cs  RpcHandlerClient.cs  RpcHandlerServer.cs
projects/omgpp-csharp/OmgppSharp/OmgppSharpServer/: OmgppSharpServer.csproj  Server.cs  Server.g.cs
projects/omgpp-protoc-plugin/: dev_protoc_input.txt  proto-omgpp-gen.py  test_protoc.sh  utils.py
projects/omgpp-protoc-plugin/languages/csharp/: csharp_gen.py  csharp_rpc_templates.py
projects/omgpp-protoc-plugin/proto/: message.proto  services.proto
projects/omgpp/crates/client/: Cargo.toml  build.rs
projects/omgpp/crates/client/src/: ffi.rs  lib.rs
projects/omgpp/crates/omgpp-core/: Cargo.toml
projects/omgpp/crates/omgpp-core/proto/: general-message.proto
projects/omgpp/crates/omgpp-core/src/: ffi.rs
projects/omgpp/crates/server/: Cargo.toml  build.rs
projects/omgpp/crates/server/src/: connection_tracker.rs  ffi.rs  lib.rs
projects/omgpp/examples/simple_chat/: Cargo.toml
projects/omgpp/examples/simple_chat/src/: main.rs
scripts/: README.md
