[package]
name = "omgpp-core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
protobuf-codegen = { version = "3.7.1"}
csbindgen = "1.8.0"

[dependencies]
protobuf = { version = "3.7.1" }
gns = { git="https://github.com/hussein-aitlahcen/gns-rs.git",rev="a0fc575" }
gns-sys = { git="https://github.com/hussein-aitlahcen/gns-rs.git",rev="a0fc575" }
either = { version = "1.13.0" }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]