[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
gns = { git="https://github.com/hussein-aitlahcen/gns-rs.git",rev="a0fc575" }
gns-sys = { git="https://github.com/hussein-aitlahcen/gns-rs.git",rev="a0fc575" }
md5 = { version="0.7.0" }
bimap = { version="0.6.3" }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]