[package]
name = "simple_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
gns = { git="https://github.com/hussein-aitlahcen/gns-rs.git",rev="a0fc575" }
gns-sys = { git="https://github.com/hussein-aitlahcen/gns-rs.git",rev="a0fc575" }
md5 = { version="0.7.0" }
bimap = { version="0.6.3" }
protobuf = { version = "3.7.1" }
either = { version = "1.13.0" }
omgpp-core = {path = "../../crates/omgpp-core" }
server= {path = "../../crates/server"}
client= {path = "../../crates/client"}